Fix leaflet controls z-index, raw width in admin/change_form.html

--- a/wastd/static/css/project.css
+++ b/wastd/static/css/project.css
@@ -114,3 +114,7 @@ ul.grp-tools.grp-related-widget-tools {
   position: relative!important;
   right: 0px!important;
 }
+
+
+/* Custom styles for leaflet/widget.html */
+.leaflet-textarea {width: 100%;}
